fix: update sidebar subtitle style for improved readability

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -8,3 +8,11 @@
 ';
 
 /* append your custom style below */
+
+// #sidebar .site-subtitle.fst-italic.mb-0 {
+//   font-style: italic !important;
+// }
+
+#sidebar .site-subtitle {
+  font-style: normal !important;
+}
